force-app/main/default/objects/Interim_Payments__c/Interim_Payments__c.object-meta.xml
<CustomObject>
    <label>Interim Payments Received</label>
    <nameField>
        <displayFormat>IPC-{YY}-{MM}-{0000}</displayFormat>
        <label>Interim Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interim Payments Received</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>