force-app/main/default/objects/Interim_Payments__c/fields/Amount_Interim__c.field-meta.xml
<CustomField>
    <fullName>Amount_Interim__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>