force-app/main/default/objects/Interim_Payments__c/fields/Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Amount_Type__c</fullName>
    <label>Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Transaction Fee</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Transferred from Booking</fullName>
            </value>
            <value>
                <fullName>Verification Charges</fullName>
            </value>
            <value>
                <fullName>Cheque Bouncing Charges</fullName>
            </value>
            <value>
                <fullName>Transfer Charges</fullName>
            </value>
            <value>
                <fullName>Conversion Charges</fullName>
            </value>
            <value>
                <fullName>Reallocation Charges</fullName>
            </value>
            <value>
                <fullName>Transfer Fee</fullName>
            </value>
            <value>
                <fullName>Addition/Deletion Charges</fullName>
            </value>
            <value>
                <fullName>DLD Fees</fullName>
            </value>
            <value>
                <fullName>Title Deed Fees (Units)</fullName>
            </value>
            <value>
                <fullName>Title Deed Fees (Villas)</fullName>
            </value>
            <value>
                <fullName>Title Deed Charges</fullName>
            </value>
            <value>
                <fullName>Pre-registration To Pre-title Deed</fullName>
            </value>
            <value>
                <fullName>Pre-registration to pre-title deed (completed projects)</fullName>
            </value>
            <value>
                <fullName>Community Management Services</fullName>
            </value>
            <value>
                <fullName>Service charge</fullName>
            </value>
            <value>
                <fullName>Fund Transfer</fullName>
            </value>
            <value>
                <fullName>Mortgage Fee</fullName>
            </value>
            <value>
                <fullName>Late Payment Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>