force-app/main/default/objects/Interim_Payments__c/fields/Application_Booking_Interim__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking_Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipName>Interim_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>