force-app/main/default/objects/Interim_Payments__c/fields/Approval_Status_Interim__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Interim__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>UnProcessed</fullName>
            </value>
            <value>
                <fullName>PDC</fullName>
            </value>
            <value>
                <fullName>Cheque Dishonoured</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted for Cheque Hold</fullName>
            </value>
            <value>
                <fullName>Cheque Hold Approved</fullName>
            </value>
            <value>
                <fullName>Submitted for Cheque Replacement</fullName>
            </value>
            <value>
                <fullName>Cheque Replacement Approved</fullName>
            </value>
            <value>
                <fullName>Auto-Rejected - Payment not made</fullName>
                <isActive>false</isActive>
                <label>Auto-Rejected - Payment not made</label>
            </value>
            <value>
                <fullName>Hold</fullName>
                <isActive>false</isActive>
                <label>Hold</label>
            </value>
            <value>
                <fullName>Sent for Banking</fullName>
                <isActive>false</isActive>
                <label>Sent for Banking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>