force-app/main/default/objects/Interim_Payments__c/fields/Bank_Branch_Address_Interim__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Address_Interim__c</fullName>
    <label>Bank Branch Address</label>
    <type>TextArea</type>
</CustomField>