force-app/main/default/objects/Interim_Payments__c/fields/Bank_Name_Interim__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Interim__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia Commercial Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Australia &amp; New Zealand Banking Group</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Bank Of America</fullName>
            </value>
            <value>
                <fullName>Bank Of China(Hong Kong)</fullName>
            </value>
            <value>
                <fullName>Bank Of India</fullName>
            </value>
            <value>
                <fullName>Bank Of Taiwan</fullName>
            </value>
            <value>
                <fullName>Bank Of Tokyo-Mitsubishi UFJ, Ltd.</fullName>
            </value>
            <value>
                <fullName>Barclays Bank Plc</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>DBS Bank Ltd</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank AG</fullName>
            </value>
            <value>
                <fullName>Hong Leong Bank</fullName>
            </value>
            <value>
                <fullName>HSBC Holdings</fullName>
            </value>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>Industrial &amp; Commercial Bank of China (ICBC)</fullName>
            </value>
            <value>
                <fullName>JPMorgan Chase Bank</fullName>
            </value>
            <value>
                <fullName>Malayan Banking Berhad (Maybank)</fullName>
            </value>
            <value>
                <fullName>Royal Bank Of Canada</fullName>
            </value>
            <value>
                <fullName>Royal Bank Of Scotland</fullName>
            </value>
            <value>
                <fullName>Societe Generale</fullName>
            </value>
            <value>
                <fullName>Standard Chartered</fullName>
            </value>
            <value>
                <fullName>State Bank Of India</fullName>
            </value>
            <value>
                <fullName>The Bank Of Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>