force-app/main/default/objects/Interim_Payments__c/fields/Bounced_Reason__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Reason__c</fullName>
    <inlineHelpText>If the cheque was bounced, then what was the reason.</inlineHelpText>
    <label>Bounced Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Signature not matching</fullName>
            </value>
            <value>
                <fullName>Cheque drawn irregularly</fullName>
            </value>
            <value>
                <fullName>Amount not matching words</fullName>
            </value>
            <value>
                <fullName>No Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>