force-app/main/default/objects/Interim_Payments__c/fields/Cheque_Bounced_Interim__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounced_Interim__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only Checked if the cheque is bounced.</inlineHelpText>
    <label>Cheque Bounced</label>
    <type>Checkbox</type>
</CustomField>