force-app/main/default/objects/Interim_Payments__c/fields/Cheque_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Date__c</fullName>
    <label>Cheque Date</label>
    <type>DateTime</type>
</CustomField>