force-app/main/default/objects/Interim_Payments__c/fields/Cheque_Demand_Draft_Number_Interim__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Demand_Draft_Number_Interim__c</fullName>
    <label>Cheque/ Demand Draft Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>