force-app/main/default/objects/Interim_Payments__c/fields/Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Account</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Interim Payments Received</relationshipLabel>
    <relationshipName>Interim_Payments_Received</relationshipName>
    <type>Lookup</type>
</CustomField>