force-app/main/default/objects/Interim_Payments__c/fields/Debit_Account__c.field-meta.xml
<CustomField>
    <fullName>Debit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debit Account</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Interim Payments Received (Debit Account)</relationshipLabel>
    <relationshipName>Interim_Payments_Received1</relationshipName>
    <type>Lookup</type>
</CustomField>