force-app/main/default/objects/Interim_Payments__c/fields/IFSC_RTGS_Code_Interim__c.field-meta.xml
<CustomField>
    <fullName>IFSC_RTGS_Code_Interim__c</fullName>
    <label>IFSC RTGS Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>