force-app/main/default/objects/Interim_Payments__c/fields/Instrument_Date__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Date__c</fullName>
    <label>Instrument Date</label>
    <type>DateTime</type>
</CustomField>