force-app/main/default/objects/Interim_Payments__c/fields/Interim_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Interim_Payment_Type__c</fullName>
    <label>Interim Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Request</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>