force-app/main/default/objects/Interim_Payments__c/fields/Interim_Receipt_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Interim_Receipt_Sent_Date__c</fullName>
    <label>Interim Receipt Sent Date</label>
    <type>Date</type>
</CustomField>