force-app/main/default/objects/Interim_Payments__c/fields/Interim_Receipt_sent_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Interim_Receipt_sent_to_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interim Receipt sent to customer</label>
    <type>Checkbox</type>
</CustomField>