force-app/main/default/objects/Interim_Payments__c/fields/Payment_Date_Interim__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Interim__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>