force-app/main/default/objects/Interim_Payments__c/fields/Payment_Mode_Interim__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode_Interim__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>OTC Deposits(Cash counter)</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>CDM Cash (Cash Deposit in Machine)</fullName>
            </value>
            <value>
                <fullName>CDM Cheque (Cheque Deposit in Machine)</fullName>
            </value>
            <value>
                <fullName>IWT(International)</fullName>
            </value>
            <value>
                <fullName>DWT(Domestic)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>