force-app/main/default/objects/Interim_Payments__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>Interim Payments Received</relationshipLabel>
    <relationshipName>Interim_Payments_Received</relationshipName>
    <type>Lookup</type>
</CustomField>