force-app/main/default/objects/Interim_Payments__c/fields/Receipt_Reversed_Interim__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reversed_Interim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Reversed</label>
    <type>Checkbox</type>
</CustomField>