force-app/main/default/objects/Interim_Payments__c/fields/Rejection_Cause__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Cause__c</fullName>
    <label>Rejection Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque Bounced</fullName>
            </value>
            <value>
                <fullName>Customer Recalled</fullName>
            </value>
            <value>
                <fullName>Reallocation Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>