force-app/main/default/objects/Interim_Payments__c/fields/Submit_for_Check_Hold__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Check_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit for Check Hold</label>
    <type>Checkbox</type>
</CustomField>