force-app/main/default/objects/Interim_Payments__c/fields/Submit_for_Cheque_Replacement_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Cheque_Replacement_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit for Cheque Replacement Approval</label>
    <type>Checkbox</type>
</CustomField>