force-app/main/default/objects/Interim_Payments__c/recordTypes/Income_Charges_Received.recordType-meta.xml
<RecordType>
    <fullName>Income_Charges_Received</fullName>
    <active>true</active>
    <label>Income Charges Received</label>
</RecordType>