force-app/main/default/objects/Interim_Payments__c/recordTypes/Payment_Received.recordType-meta.xml
<RecordType>
    <fullName>Payment_Received</fullName>
    <active>true</active>
    <label>Payment Received</label>
</RecordType>