force-app/main/default/objects/Interim_Payments__c/validationRules/Approved_Payment_Cannot_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Payment_Cannot_be_Changed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Approval_Status_Interim__c , &apos;Approved&apos; ),
  ISCHANGED( Approval_Status_Interim__c )
)</errorConditionFormula>
    <errorDisplayField>Approval_Status_Interim__c</errorDisplayField>
    <errorMessage>Once Payment is Approved, Cannot be changed</errorMessage>
</ValidationRule>