force-app/main/default/objects/Interim_Payments__c/validationRules/Approved_Payment_Cheque_bounce_Validati.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Payment_Cheque_bounce_Validati</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Cheque_Bounced_Interim__c = TRUE, ISPICKVAL(Approval_Status_Interim__c, &apos;Approved&apos;))</errorConditionFormula>
    <errorMessage>If payment is approved, Cheque cannot be bounced.</errorMessage>
</ValidationRule>