force-app/main/default/objects/Interim_Payments__c/validationRules/Bank_Name_Cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Name_Cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   ISPICKVAL(Payment_Mode_Interim__c, &quot;Cheque&quot;),
   ISBLANK(Text(Bank_Name_Interim__c))
)</errorConditionFormula>
    <errorDisplayField>Bank_Name_Interim__c</errorDisplayField>
    <errorMessage>Bank name can not be blank if the payment mode is Cheque</errorMessage>
</ValidationRule>