force-app/main/default/objects/Interim_Payments__c/validationRules/Bounce_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Bounce_Reason_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Cheque_Bounced_Interim__c = TRUE, ISPICKVAL(Bounced_Reason__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Bounced_Reason__c</errorDisplayField>
    <errorMessage>Bounce Reason is mandatory in Cheque bounce checkbox is true</errorMessage>
</ValidationRule>