force-app/main/default/objects/Interim_Payments__c/validationRules/Cancellation_without_Cause.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_without_Cause</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Approval_Status_Interim__c,&apos;Rejected&apos;) 
|| ISPICKVAL(Approval_Status_Interim__c,&apos;Auto-Rejected - Payment not made&apos;) ) &amp;&amp;  ISPICKVAL(Rejection_Cause__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Rejection_Cause__c</errorDisplayField>
    <errorMessage>Cannot Reject an IPR without giving Rejection Cause</errorMessage>
</ValidationRule>