force-app/main/default/objects/Interim_Payments__c/validationRules/Cheque_Cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_Cannot_be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   ISPICKVAL(Payment_Mode_Interim__c, &quot;Cheque&quot;),
   ISPICKVAL(Payment_Mode_Interim__c, &quot;CDM-Cheque&quot;)
) &amp;&amp; ISBLANK(Instrument_Number__c)</errorConditionFormula>
    <errorDisplayField>Instrument_Number__c</errorDisplayField>
    <errorMessage>Instrument number cannot be blank if the payment mode is Cheque.</errorMessage>
</ValidationRule>