force-app/main/default/objects/Interim_Payments__c/validationRules/Cheque_hold_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_hold_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Submit_for_Check_Hold__c == true &amp;&amp; 
NOT(ISPICKVAL(Approval_Status_Interim__c, &quot;Approved&quot;)) &amp;&amp; 
(ISPICKVAL(Payment_Mode_Interim__c, &quot;Cheque&quot;)) &amp;&amp;
(DATEVALUE(Instrument_Date__c) - TODAY()) &lt;= 10</errorConditionFormula>
    <errorMessage>The Cheque can be put on hold only 10 days before the instrument date.</errorMessage>
</ValidationRule>