force-app/main/default/objects/Interim_Payments__c/validationRules/Cheque_Replacement_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_Replacement_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Approval_Status_Interim__c, &quot;Approved&quot;),
Submit_for_Cheque_Replacement_Approval__c = TRUE
)</errorConditionFormula>
    <errorMessage>If the Payment is Approved then the Cheque cannot be replaced.</errorMessage>
</ValidationRule>