force-app/main/default/objects/Interim_Payments__c/validationRules/Mandatory_Fields_for_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Fields_for_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Approval_Status_Interim__c,&apos;Approved&apos;) 
&amp;&amp; (
  GL_Date__c = NULL
  || Credit_Account__c = NULL
  || Debit_Account__c = NULL 

)</errorConditionFormula>
    <errorMessage>GL Date, Credit Account and Debit Accounts are mandatory before Approving IPR.</errorMessage>
</ValidationRule>